# miniLoader

./: CMakeLists.txt  README.md  my_ldscript.scr  test.cpp
include/: helper.cpp  helper.hpp
src/: change_flg.cpp  loader.cpp  main.cpp
